--- a/HTML/index9.html
+++ b/HTML/index9.html
@@ -1,10 +1,10 @@
+<!--轮播图Banner及期刊注解-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
   <link rel="stylesheet" href="../CSS/style9.css">
-  <script src="../JavaScript/JavaScript3.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="bnr">
