前端开发基础HTML+CSS+Javascript练习笔记

--- a/HTML/index5.html
+++ b/HTML/index5.html
@@ -8,7 +8,7 @@
 <body>
 <div class="initial">
   <ul>
-<!--      清除默认样式，添加初始样式后的导航-->
+<!--      清除默认样式并添加初始样式后的导航-->
     <li><a href="https://www.baidu.com/">百度</a></li>
     <li><a href="https://blog.csdn.net/Q0717168/article/details/115449824">首页</a></li>
     <li><a href="https://www.cnblogs.com/dyd168/p/14603495.html">科技</a></li>
