--- a/HTML/index7.html
+++ b/HTML/index7.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../CSS/style7.css">
 </head>
 <body>
-<!--导航菜单-->
+<!--压盖加导航菜单-->
 <div id="cover">
     <div>
         <p class="cover">童年，无限乐趣！</p>
